using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UniRx;

public class CameraManeger : MonoBehaviour
{
    /*
    [SerializeField] private CameraScrolling cameraScrolling;
    [SerializeField] private CameraZoomig cameraZoomig;
    private void pdate()
    {
        cameraScrolling.scroll();
    }
    */
}
